--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                                     </p>
                                 </div>
                                 <div class="box-get-started-option">
-                                    <a class="poppins-bold" href="https://www.youtube.com">
+                                    <a class="poppins-bold" href="boxes.html">
                                         Get Started
                                         <img src="img/link-alt.svg">
                                     </a>
@@ -79,7 +79,7 @@
                                     </p>
                                 </div>
                                 <div class="box-get-started-option">
-                                    <a class="poppins-bold" href="https://www.youtube.com">
+                                    <a class="poppins-bold" href="boxes.html">
                                         Get Started
                                         <img src="img/link-alt.svg">
                                     </a>
