--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/font.css">
     <title>Document</title>
@@ -8,91 +11,102 @@
 <body>
     <div class="wrapper">
         <header class="main-section-header">
-            <div class="header-logo">
-                <a class="poppins-bold" href="index.html">
-                    <img src="img/owl.svg">
-                    <span>WorkWise</span>
-                </a>
-            </div>
-            <div class="header-nav poppins-regular">
-                <nav>
-                    <ul>
-                        <li>
-                            About Us
-                        </li>
-                        <li>
-                            Contact
-                        </li>
-                        <li>
-                            Log in
-                        </li>
-                        <li>
-                            Join
-                        </li>
-                        <li>
-                            EN
-                        </li>
-                    </ul>
-                </nav>
-            </div>
-        </header>
-        <section class="main-section">
-            <div class="middle-content">
-                <div class="main-section-info">
-                    <div class="main-section-left-side">
-                        <div class="main-section-title">
-                            <h1 class="poppins-bold">
-                                Where Top Talent<br>
-                                Meets Top Companies
-                            </h1>
-                        </div>
-                        <div class="main-section-options">
-                            <div class="main-section-option-box">
-                                <div class="box-title">
-                                    <h2 class="poppins-bold">
-                                        I’m a freelancer
-                                    </h2>
-                                </div>
-                                <div class="box-paragraph">
-                                    <p class="poppins-light">
-                                        Get the opportunity<br>that
-                                        Boost your career
-                                    </p>
-                                </div>
-                                <div class="box-get-started-option">
-                                    <a class="poppins-bold" href="boxes.html">
-                                        Get Started
-                                        <img src="img/link-alt.svg">
-                                    </a>
-                                </div>
-                            </div>
-                            <div class="main-section-option-box">
-                                <div class="box-title">
-                                    <h2 class="poppins-bold">
-                                        I Want to hire
-                                    </h2>
-                                </div>
-                                <div class="box-paragraph">
-                                    <p class="poppins-light">
-                                        Find your desirable<br>
-                                        Freelancer
-                                    </p>
-                                </div>
-                                <div class="box-get-started-option">
-                                    <a class="poppins-bold" href="boxes.html">
-                                        Get Started
-                                        <img src="img/link-alt.svg">
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="main-section-showcase">
-                        <img src="img/Rectangle 1261.svg">
+            <div class="header-content">
+                <div class="header-logo">
+                    <a class="poppins-bold" href="index.html">
+                        <img src="img/owl.svg">
+                        <span>WorkWise</span>
+                    </a>
+                </div>
+                <div class="header-nav poppins-regular">
+                    <nav>
+                        <ul>
+                            <li>
+                                About Us
+                            </li>
+                            <li>
+                                Contact
+                            </li>
+                            <li>
+                                Log in
+                            </li>
+                            <li>
+                                Join
+                            </li>
+                            <li>
+                                EN
+                            </li>
+                        </ul>
+                    </nav>
+                    <div class="header-responsive-nav">
+                        <svg viewBox="0 0 100 80" width="40" height="40">
+                            <rect width="100" height="20"></rect>
+                            <rect y="30" width="100" height="20"></rect>
+                            <rect y="60" width="100" height="20"></rect>
+                          </svg>
                     </div>
                 </div>
             </div>
-        </section>
+        </header>
+        <div class="middle-content">
+            <section class="main-section">
+                <div class="section-middle-content">
+                    <div class="main-section-info">
+                        <div class="main-section-left-side">
+                            <div class="main-section-title">
+                                <h1 class="poppins-bold">
+                                    Where Top Talent<br>
+                                    Meets Top Companies
+                                </h1>
+                            </div>
+                            <div class="main-section-options">
+                                <div class="main-section-option-box">
+                                    <div class="box-title">
+                                        <h2 class="poppins-bold">
+                                            I’m a freelancer
+                                        </h2>
+                                    </div>
+                                    <div class="box-paragraph">
+                                        <p class="poppins-light">
+                                            Get the opportunity<br>that
+                                            Boost your career
+                                        </p>
+                                    </div>
+                                    <div class="box-get-started-option">
+                                        <a class="poppins-bold" href="boxes.html">
+                                            Get Started
+                                            <img src="img/link-alt.svg">
+                                        </a>
+                                    </div>
+                                </div>
+                                <div class="main-section-option-box">
+                                    <div class="box-title">
+                                        <h2 class="poppins-bold">
+                                            I Want to hire
+                                        </h2>
+                                    </div>
+                                    <div class="box-paragraph">
+                                        <p class="poppins-light">
+                                            Find your desirable<br>
+                                            Freelancer
+                                        </p>
+                                    </div>
+                                    <div class="box-get-started-option">
+                                        <a class="poppins-bold" href="boxes.html">
+                                            Get Started
+                                            <img src="img/link-alt.svg">
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="main-section-showcase">
+                            <img src="img/Rectangle 1261.svg">
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </div>
         <footer class="main-section-footer poppins-light">
             <div class="footer-company-rights">
                 <img src="img/copyright-circle.svg" alt="copyright-circle">
