--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                         </li>
                         <li>
                             <a href="https://www.tiktok.com">
-                                <img src="img/vector.svg" alt="tiktok">
+                                <img src="img/tiktok.svg" alt="tiktok">
                             </a>
                         </li>
                         <li>
