--- a/boxes.html
+++ b/boxes.html
@@ -33,7 +33,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="https://www.youtube.com">
+                                <a href="favorite.html">
                                     <img 
                                     src="img/heart.svg" 
                                     alt="heart">
