--- a/favorite.html
+++ b/favorite.html
@@ -98,7 +98,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="box-ads">
+                            <div class="box">
                                 <div class="box-ad-square">
                                     UX Research
                                 </div>
